--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,9 @@ name: Deploy React app
 on:
   push:
     branches:
-      - main
+      - master
 
-permisions:
+permissions:
   contents: read
   pages: write
   id-token: write
