--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm run build
       - name: Setup pages
         uses: actions/configure-pages@v3
+        with:
+          enablement: true
       - name: Upload dist folder
         uses: actions/upload-pages-artifact@v1
         with:
